#13195: Referral - UI - Display issue on Geographic Distribution screen on Mobile Web

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -13353,7 +13353,7 @@ p a.blog-new-read-more {
     background-color: white;
 }
 .affiliate-distrib-page .mobile.top-hr-pad {
-    padding-top: 130px;
+    padding-top: 65px;
 }
 .mobile.fm-affiliate.tab-button {
     display: inline-block;
